--- a/latihan.html
+++ b/latihan.html
@@ -13,8 +13,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: center;
             display: grid;
-            grid-template-columns: 1fr 2fr 3fr;
-            grid-template-rows: 1fr 2fr 3fr;
+            grid-template-columns: repeat(9, 1fr);
         }
 
         .item {
